welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:12: error: 'while' expected but '}' found.
	}while(!crossing())
        ^Poucet:12: error: ';' expected but 'while' found.
	}while(!crossing())
         ^